tests/fixtures/valid/match.py
match True:  # Check 1
    case True:
        pass

match True:  # Check 2
    case True:
        pass

"""
Lorem ipsum dolor sit amet
"""
match True:  # Check 3
    case True:
        pass

# Lorem ipsum dolor sit amet
match True:  # Check 4
    case True:
        pass

if 1 == 1:  # Check 5
    match True:
        case True:
            pass

    match True:
        case True:
            pass
elif 2 == 2:
    match True:
        case True:
            pass

    match True:
        case True:
            pass
else:
    match True:
        case True:
            pass

    match True:
        case True:
            pass

for i in [1, 2]:  # Check 6
    match True:
        case True:
            pass

    match True:
        case True:
            pass
else:
    match True:
        case True:
            pass

    match True:
        case True:
            pass

while True:  # Check 7
    match True:
        case True:
            pass

    match True:
        case True:
            pass
else:
    match True:
        case True:
            pass

    match True:
        case True:
            pass

try: # Check 8
    match True:
        case True:
            pass

    match True:
        case True:
            pass
except:
    match True:
        case True:
            pass

    match True:
        case True:
            pass
finally:
    match True:
        case True:
            pass

    match True:
        case True:
            pass
